--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
     <div class="container">
         <div class="category">
             <h2>Papers</h2>
-            <a href="path/to/paper1.pdf" target="_blank">Paper 1</a>
+            <a href="papers/sadder.pdf" target="_blank">Paper 1</a>
             <p class="description">Description of Paper 1</p>
-            <a href="path/to/paper2.pdf" target="_blank">Paper 2</a>
+            <a href="papers/mlmac.pdf" target="_blank">Paper 2</a>
             <p class="description">Description of Paper 2</p>
         </div>
         <div class="category">
