--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <div class="background-image"></div>
-    <h1 class="greeting">Hello!</h1>
+    <h1 class="greeting">Hello! This website and its content are still under construction!</h1>
     <h2 class="name">Welcome to Jord's website</h2>
     <div class="container">
         <div class="category">
