--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
             <h2>Papers</h2>
             <a href="papers/sadder.pdf" target="_blank">Paper 1</a>
             <p class="description">Description of Paper 1</p>
-            <a href="papers/mlmac.pdf" target="_blank">Paper 2</a>
+            <a href="papers/Unified.pdf" target="_blank">Paper 2</a>
             <p class="description">Description of Paper 2</p>
-        </div>
+            <a href="papers/convnet.pdf" target="_blank">Paper 3</a>
+            <p class="description">Description of Paper 3</p>
+	</div>
         <div class="category">
             <h2>Games</h2>
             <a href="https://jordinne.itch.io/conway-corrupted" target="_blank">Game 1</a>
