--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             display: inline-block;
             background-color: #333;
             padding: 10px;
-            margin-bottom: 10px;
+            margin-bottom: 100px;
             text-decoration: none;
             border-radius: 5px;
         }
@@ -71,13 +71,13 @@
         <div class="category">
             <h2>Papers</h2>
             <a href="papers/mlmac.pdf" target="_blank">A Solution to the Model Attribution Challenge</a>
-            <p class="description">Description of Paper 1</p>
-            <a href="papers/Unified.pdf" target="_blank">A Unified</a>
-            <p class="description">Description of Paper 2</p>
-            <a href="papers/convnet.pdf" target="_blank">Paper 3</a>
-            <p class="description">Description of Paper 3</p>
-            <a href="papers/convnet.pdf" target="_blank">Paper 4</a>
-            <p class="description">Description of Paper 4</p>
+            <p class="description">Methods for detecting forensics and attributing finetuned language models black-box access<br>2022, rewritten 2023</p>
+            <a href="papers/Unified.pdf" target="_blank">Towards a Unified Dangerous Capabilities Benchmark</a>
+            <p class="description">Proposal for a unified and standardised benchmark for dangerous capabilities in AI models <br>Non-trivial Fellowship, 2023</p>
+            <a href="papers/convnet.pdf" target="_blank">Cross-Lingual Generalizability of the SADDER benchmark</a>
+            <p class="description">Researching situational awareness capabilities of gpt3.5 and gpt4 across different languages <br> Model evalulations hackathon, 2023</p>
+            <a href="papers/convnet.pdf" target="_blank">Interpretable Convnet for disease diagnosis</a>
+            <p class="description">Using convolutional neural networks and GradientCam to detect and areas of interest dermatological cancer, Alzheimer’s, and Covid-19 <br> 2021 </p>
         </div>
         <div class="category">
             <h2>Games</h2>
