--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <p class="description">Methods for detecting forensics and attributing finetuned language models black-box access<br>2022, rewritten 2023</p>
             <a href="papers/Unified.pdf" target="_blank">Towards a Unified Dangerous Capabilities Benchmark</a>
             <p class="description">Proposal for a unified and standardised benchmark for dangerous capabilities in AI models <br>Non-trivial Fellowship, 2023</p>
-            <a href="papers/convnet.pdf" target="_blank">Cross-Lingual Generalizability of the SADDER benchmark</a>
+            <a href="papers/sadder.pdf" target="_blank">Cross-Lingual Generalizability of the SADDER benchmark</a>
             <p class="description">Researching situational awareness capabilities of gpt3.5 and gpt4 across different languages <br> Model evalulations hackathon, 2023</p>
             <a href="papers/convnet.pdf" target="_blank">Interpretable Convnet for disease diagnosis</a>
             <p class="description">Using convolutional neural networks and GradientCam to detect and areas of interest dermatological cancer, Alzheimer’s, and Covid-19 <br> 2021 </p>
